<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, dailyFHLogin!</string>
    <string name="app_name">dailyFH</string>
    <string name="labelPinEigeben">Pin:</string>
    <string name="labelMatrikelnummerEigeben">Matrikelnummer:</string>
    <string name="buttonLogin">Anmelden</string>
    <string name="labelRegisterAcc">Als neuer Student anmelden</string>
    <string name="buttonAktuelles">Aktuelles</string>
    <string name="buttonMensa">Mensa</string>
    <string name="buttonStundenplan">Kalender</string>
    <string name="buttonEinstellungen">Einstellungen</string>
    <string name="KalenderTitel">Kalender</string>
    <string name="KalenderCBStundenplan">Stundenplan</string>
    <string name="KalenderCBSemesterzeitplan">Semesterzeitplan</string>
    <string name="KalenderCBPruefungen">Prüfungen</string>
    <string name="KalenderCBManuelleTermine">Manuelle Termine</string>
    <string name="NewsTitel">Aktuelles</string>
    <string name="MensaplanTitel">Mensaplan</string>
    <string name="labelMatr">Matrikelnummer</string>
    <string name="labelString">Pin:</string>
    <string name="buttonRegister">Registrieren</string>
</resources>
