<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content" 
	android:layout_height="match_parent"
	android:background="@drawable/bgnologo"
	android:id="@+id/containerMenueAll">
    
    
     <ImageView 	android:layout_height="wrap_content" 
	    			android:layout_width="wrap_content" 
	    			android:src="@drawable/logologin" 
	    			android:id="@+id/imageLogoLogin" />
    
    <RelativeLayout 
    	android:id="@+id/containerMenuButtons" 
    	android:layout_height="wrap_content"
    	android:layout_marginTop="280dip"
    	android:layout_marginLeft="50dip" 
    	android:layout_width="wrap_content">
    	
    	<Button 
    		android:layout_height="wrap_content" 
    		android:layout_width="wrap_content" 
    		android:id="@+id/buttonAktuelles" android:text="@string/buttonAktuelles"/>
    		
    	<Button 
    		android:id="@+id/buttonMensaplan" 
    		android:layout_height="wrap_content" 
    		android:layout_width="wrap_content" 
    		android:text="@string/buttonMensa" 
    		android:layout_toRightOf="@+id/buttonAktuelles" 
    		android:layout_alignTop="@+id/buttonAktuelles" 
    		android:layout_alignBottom="@+id/buttonAktuelles" 
    		android:layout_marginLeft="50dip"/>
    		
    	<Button 
    		android:id="@+id/buttonStundenplan" 
    		android:layout_height="wrap_content" 
    		android:layout_width="wrap_content" 
    		android:text="@string/buttonStundenplan" 
    		android:layout_marginTop="70dip"
    		android:layout_below="@+id/buttonAktuelles" 
    		android:layout_alignLeft="@+id/buttonAktuelles" 
    		android:layout_alignRight="@+id/buttonAktuelles" />
    		
    	<Button 
    		android:id="@+id/buttonEinstellungen" 
    		android:text="@string/buttonEinstellungen"
    		android:layout_height="wrap_content" 
    		android:layout_width="wrap_content"
    		android:layout_marginLeft="50dip" 
    		android:layout_toRightOf="@+id/buttonStundenplan" 
    		android:layout_alignTop="@+id/buttonStundenplan" 
    		android:layout_alignBottom="@+id/buttonStundenplan" 
    		 />
    
    
    </RelativeLayout>
	
	
	
	
</RelativeLayout>

