<?xml version="1.0" encoding="utf-8"?>
    
<ScrollView 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/scrollView1" 
	android:layout_width="wrap_content" 
	android:background="@drawable/bgnologo" 
	android:layout_height="wrap_content">   


	<RelativeLayout 
		android:id="@+id/containerAll" 
		android:layout_height="match_parent" 
		android:layout_width="wrap_content" >
	    
	    <ImageView 	android:layout_height="200dip" 
	    			android:layout_width="wrap_content" 
	    			android:src="@drawable/logologin" 
	    			android:id="@+id/imageLogoLogin" />
	        
	    <!-- Container für Elemente -->
	    <RelativeLayout 
	    	android:layout_marginTop="200dip" 
	    	android:id="@+id/containerLoginElemente" 
	    	android:layout_height="wrap_content" 
	    	android:layout_marginLeft="20dip" 
	    	android:layout_marginRight="20dip"
	    	android:layout_width="match_parent" >
	      
	      
	        <EditText 
	        	android:id="@+id/inputMatrikelEingabe" 
	        	android:width="200dip" 
	        	android:hint="@string/labelMatrikelnummerEigeben"
	        	android:layout_height="wrap_content"  
	        	android:layout_width="match_parent"/>
	        		        
	        <EditText 
	        	android:id="@+id/inputPinEingabe" 
	        	android:width="200dip" 
	        	android:hint="@string/labelPinEigeben"
	        	android:inputType="textPassword"
	        	android:layout_below="@+id/inputMatrikelEingabe"
	        	android:layout_height="wrap_content"  
	        	android:layout_width="match_parent"/>
	        
	        <Button android:text="@string/buttonLogin" 
	        		android:layout_height="wrap_content" 
	        		android:layout_width="wrap_content" 
	        		android:id="@+id/buttonPinOK" 
	        		android:layout_below="@+id/inputPinEingabe" 
	        		android:layout_alignLeft="@+id/inputPinEingabe" 
	        		android:layout_alignRight="@+id/inputPinEingabe" />
	        
	        <TextView android:text="@string/labelRegisterAcc" 
	        		  android:layout_height="wrap_content" 
	        		  android:textColor="#000000" 
	        		  android:layout_width="match_parent" 
	        		  android:id="@+id/labelRegisterAccount" 
	        		  android:gravity="center_horizontal"
	        		  android:layout_below="@+id/buttonPinOK" 
	        		  android:layout_alignLeft="@+id/buttonPinOK" 
	        		  android:layout_alignRight="@+id/buttonPinOK" />
	    
	    </RelativeLayout>
	    

		


	</RelativeLayout>
</ScrollView>
