<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout 	xmlns:android="http://schemas.android.com/apk/res/android"
					android:layout_width="match_parent" 
    				android:layout_height="match_parent" 
    				android:id="@+id/relativeLayout1"
    				android:background="@drawable/bgnologo"
    				>
         
         <ImageView android:layout_height="300dip" 
	    			android:layout_width="wrap_content" 
	    			android:src="@drawable/logologin" 
	    			android:id="@+id/imageLogoLogin" />
        			
        <RelativeLayout android:layout_marginTop="-40dip" 
         				android:layout_height="wrap_content" 
         				android:id="@+id/relativeLayout2" 
         				android:layout_width="wrap_content" 
         				android:layout_below="@+id/imageLogoLogin" 
         				android:layout_alignLeft="@+id/imageLogoLogin" 
         				android:layout_alignRight="@+id/imageLogoLogin">
             
              <TextView android:text="@string/labelMatr" 
             			android:textColor="@color/black" 
             			android:layout_width="wrap_content" 
             			android:layout_height="wrap_content" 
             			android:id="@+id/labelMatr" />
             			
              <EditText android:layout_below="@+id/labelMatr" 
              			android:layout_width="200dip" 
              			android:layout_alignLeft="@+id/labelMatr" 
              			android:layout_height="wrap_content" 
              			android:id="@+id/editMatr" />
              			
              <TextView android:text="@string/labelString" 
              			android:layout_below="@+id/editMatr" 
              			android:textColor="@color/black" 
              			android:layout_width="wrap_content" 
              			android:layout_alignLeft="@+id/editMatr" 
              			android:layout_height="wrap_content" 
              			android:id="@+id/labelPin" />
              			
              <EditText android:layout_below="@+id/labelPin" 
              			android:layout_width="200dip" 
              			android:inputType="textPassword"
              			android:layout_alignLeft="@+id/labelPin" 
              			android:layout_height="wrap_content" 
              			android:id="@+id/editPin" />
         
         </RelativeLayout>
         
            <Button android:layout_below="@+id/relativeLayout2" 
          			android:layout_width="wrap_content" 
          		  	android:layout_height="wrap_content" 
          		  	android:layout_alignLeft="@+id/relativeLayout2" 
          		  	android:layout_alignRight="@+id/relativeLayout2" 
          		  	android:id="@+id/buttonRegisterSubmit" 
          		  	android:text="@string/buttonRegister" />
	    
</RelativeLayout>

